[build-system]
build-backend = "cmeel.build"
requires = [
  "cmeel[build]",
  "example-robot-data[build]"
]

[project]
dependencies = [
  "example-robot-data"
]
description = "Data specific to ur5 and 10 robots for hpp-corbaserver"
license = "BSD-2-Clause"
name = "hpp-universal-robot"
version = "6.0.0"

[tool.ruff]
extend-exclude = ["cmake"]

[tool.ruff.lint]
extend-select = ["I", "NPY", "RUF", "UP", "W"]

[tool.tomlsort]
all = true
